--- a/Crud-Project/src/main/resources/application.properties
+++ b/Crud-Project/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/crud-application
+spring.datasource.username=postgres
+spring.datasource.password=1407Mateus
+spring.jpa.hibernate.ddl-auto=update
 
+
+spring.jpa.properties.hibernate.jdbc.lab.non_contextual_creation=true
